Fixed Layout Issues  - Fixed several issues with masonry  - Restructured masonry to be pixel based, instead of percentage based  - Cards will now dynamically resize depending on the size of the image associated with them

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -213,32 +213,31 @@ hr {
   clear: both;
 }
 
-.grid-sizer,.grid-item {
+.grid-item {
   float: left;
-  width: 20%;
   background: #fff;
   border: 2px solid #E8E8E8;
+  width: 360px; /* Default size, can be adjusted */
   box-shadow: 3px 3px 20px rgb(145, 145, 145);
   border-color: hsla(0, 0%, 0%, 0.5);
   border-radius:15px;
   margin-bottom: 10px;
-  margin-right: 5px;
-  margin-left: 5px;
   overflow: hidden;
-  transition-property: background, transform;
+  transition-property: background;
   transition-duration: 0.25s;
 }
 
 .grid-item-inner-content {
   display: none;
+  overflow: auto;
 }
 
-.grid-item--width2 { width: 25%; }
-.grid-item--width3 { width: 30%; }
-.grid-item--width4 { width: 40%; }
+.grid-item--width2 { width: 480px; }
+.grid-item--width3 { width: 640px; }
+.grid-item--width4 { width: 820px; }
 
 .grid-item--selected {
-  width: 60%;
+  width: 820px;
   z-index: 2;
 }
 
